--- a/exercises/color-grid/styles.css
+++ b/exercises/color-grid/styles.css
@@ -1,12 +1,14 @@
 .div-container{ 
-    /* display:inline-block; */
-    
-}
-.box1{
+    box-sizing: border-box;
 
+
+    
+} 
+.box1{ 
+    
     width: 99%;
     height: 200px;
-    background-color: rgb(204, 35, 162);
+    background-color: #F5C6D6;
     margin-bottom: 5px;
     
 }
@@ -14,43 +16,43 @@
     display: inline-block;
     width: 25%;
     height: 200px;
-    background-color: #0fa1b4;
+    background-color: #EE2E84;
 
 }
 .box3{
     display: inline-block;
     width: 25%;
     height: 200px;
-    background-color: blueviolet;
+    background-color: #EE2E84;
 }
 .box4{
     display: inline-block;
-    background-color: rgb(232, 236, 16);
+    background-color: #EE2E84;
     width:24%;
     height: 200px;
 
 }
 .box5{
     display: inline-block;
-    background-color: rgba(11, 11, 170, 0.787);
+    background-color: #EE2E84;
     height: 200px;
     width: 24%;
 }
 .box6{
     display: inline-block;
-    background-color: #e71863;
+    background-color: #85CFD8;
     height: 200px;
     width: 50%;
 }
 .box7{
     display: inline-block;
-    background-color: #0aaf6a;
+    background-color: #85CFD8;
     height: 200px;
     width: 49%;
 }
 .box8{
     display: inline-block;
-    background-color: #49db24;
+    background-color: #8DC63F;
     height: 200px;
     width: 75%;  
 }
@@ -59,6 +61,27 @@
     background-color: #e1401e;
     height: 200px;
     width: 24%;  
+}
+@media(min-width: 500px) and (max-width:768px) {
+    .box1 {
+        height: 75px;
+    }
+    .box2 {width: 100%; height: 75px;         
+    }
+    .box3 {width: 100%; height: 75px;
+    } 
+    .box4 {width: 100%; height: 75px;
+    }
+    .box5 {width: 100%; height: 75px;
+    }
+    .box6 {width: 100%; height: 75px;
+    }
+    .box7 {width: 100%; height: 75px;
+    }
+    .box8 {width: 100%; height: 75px;
+    }
+    .box9 {width: 100%; height: 75px;
+    }
 }
 
 
