--- a/projects/zen-garden/styles.css
+++ b/projects/zen-garden/styles.css
@@ -1,52 +1,49 @@
 @font-face {
-    font-family: "verdemoderna";
-    src: url("./img/verdemoderna(1).woff")
+    font-family: 'verdemoderna';
+    src: url("./img/verdemoderna.woff")
 }
 
-
-#div-container{
+#div-container {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
     /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; */
-   /* mobile */
+    /* mobile */
 }
-div{
-    color: white;
-    
-}
-/* 1 div */
-#title{
 
+div {
+    color: white;
+
+}
+
+/* 1 div */
+#title {
     grid-template-columns: 1fr;
-    grid-template-rows: 1;  
-    height:100%;
+    grid-template-rows: 1;
+    height: 100%;
     width: 100%;
     /* border: solid blue; */
     grid-column: 1/3;
     background-image: url("http://www.csszengarden.com/214/huntington.jpg");
 }
-    
 
-
-img{
+img {
     position: relative;
     left: 71px;
-    top: 49px; 
+    top: 49px;
     height: 54px;
     width: 54px;
     border-radius: 50%;
-    
-       
-}
-#title > h1{
-   margin-left: 150px; 
-   font-size: 26px;
-   font-family: 'Julius Sans One', sans-serif; 
-   margin-top: -7px;
 }
 
-#title > h2{
+#title>h1 {
+    margin-left: 150px;
+    font-size: 26px;
+    font-family: 'Julius Sans One', sans-serif;
+    margin-top: -7px;
+}
+
+#title>h2 {
     font-family: 'Libre Baskerville', serif;
     font-style: italic;
     font-size: 15px;
@@ -55,111 +52,128 @@ img{
     padding-bottom: 47px;
     opacity: 0.5;
 }
+
 /* 2div */
-#view-design{
+#view-design {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     grid-column: 1fr;
-    grid-row: 2;   
+    grid-row: 2;
     width: 100%;
-    height:33%;
+    height: 33%;
     /* border: solid blue; */
     background-image: url("http://www.csszengarden.com/214/huntington.jpg");
     background-size: cover;
     opacity: 0.8;
     /* margin-top: -145px; */
 }
-#view-design > p{
+
+#view-design>p {
     font-family: 'PT Serif', serif;
     font-size: 120px;
     opacity: 0.7;
     padding-top: 9px;
     margin-top: -50px;
 }
-#view-design >h1{
+
+#view-design>h1 {
     padding-top: 9px;
     font-family: 'Julius Sans One', sans-serif;
     opacity: 0.6;
 }
-    
+
 
 /* 3div */
-#par1-container{
+#par1-container {
     grid-row: 3;
     color: black;
     background-color: white;
     background-size: 100%;
     margin-top: -147px;
-   
+
 }
-#par1{
+
+#par1 {
     font-family: 'Libre Baskerville', serif;
     font-size: 14px;
-    color: black; 
+    color: black;
     margin-right: 47px;
     margin-left: 46px;
     margin-bottom: 30px;
 }
-#par1 > p {
+
+#par1>p {
     font-family: 'Libre Baskerville', serif;
     font-size: 14px;
 }
-#enlightenment, #about{
+
+#enlightenment,
+#about {
     font-family: 'Julius Sans One', sans-serif;
     font-size: 20px;
 }
+
 /* 4div */
-#list1{
+#list1 {
     grid-row: 8;
     background-color: blueviolet;
     border: solid black;
 }
+
 /* 5div */
-#par2-container{
+#par2-container {
     grid-row: 4;
     color: black;
-    background-color: rgba(138,188,159,0.5);
-    
+    background-color: rgba(138, 188, 159, 0.5);
+
     /* border: solid blue; */
 
 }
-#par2{
+
+#par2 {
     font-family: 'Libre Baskerville', serif;
     font-size: 15px;
-    color: black; 
+    color: black;
     margin-right: 47px;
     margin-left: 46px;
     margin-bottom: 30px;
 }
-#partcip, #bene {
+
+#partcip,
+#bene {
     font-family: 'Julius Sans One', sans-serif;
     font-size: 20px;
-} 
+}
+
 /* 6div */
-#list2{
+#list2 {
     grid-row: 9;
-    background-color:purple;
-    
+    background-color: purple;
+
 }
+
 /* 7div */
-#require-container{
+#require-container {
     grid-row: 5;
-    background-color:white;
-    
+    background-color: white;
+
 }
-#require{
+
+#require {
     font-family: 'Libre Baskerville', serif;
     font-size: 15px;
-    color: black; 
+    color: black;
     margin-right: 47px;
     margin-left: 46px;
     margin-bottom: 30px;
 }
-.require{
+
+.require {
     font-family: 'Julius Sans One', sans-serif;
     font-size: 20px;
 }
+
 /* 8div */
 /* #blank{
     background-color: greenyellow;
@@ -167,35 +181,49 @@ img{
     border: solid blue;
 } */
 /* 9div */
-#footer{
-    display:flex;
+#footer {
+    display: flex;
+    text-align: center;
+    height:180px;
     grid-row: 6;
     background-image: url("http://www.csszengarden.com/214/huntington.jpg");
     border: solid blue;
 }
-#dave, #media, #zen{
+
+#dave,
+#media,
+#zen {
     color: whitesmoke;
     font-style: normal;
     font-family: 'Libre Baskerville', serif;
     font-size: 23px;
-    
+
 }
-#by, #band, #donate, #now{
-    color: rgba(255, 255, 255, 0.7); 
+
+#by,
+#band,
+#donate,
+#now {
+    color: rgba(255, 255, 255, 0.7);
     font-family: 'Libre Baskerville', serif;
     font-style: italic;
     font-size: 22px;
 }
+
 /* 10div */
-.links{
+
+#links {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100px;
+    background: #134347;
     grid-row: 7;
-    background-color: white;
-    border: solid blue;
-    color: black;
-    font-family: "verdemoderna";
 }
-    
 
-
-
-
+.html {
+    font-size: 40px;
+    color: whitesmoke;
+    opacity: 0.5;
+    font-family: 'verdemoderna';
+}
