--- a/projects/axios-todo/styles.css
+++ b/projects/axios-todo/styles.css
@@ -16,7 +16,7 @@
 
 #toDoContainer>h1 {
     font-size: 45px;
-   cd font-family: 'Oleo Script Swash Caps', cursive;
+    font-family: 'Oleo Script Swash Caps', cursive;
     /* font-family: 'Oleo Script', cursive; */
     /* font-family: 'Playball', cursive; */
     /* font-family: 'Yeseva One', cursive; */
