--- a/projects/zen-garden/styles.css
+++ b/projects/zen-garden/styles.css
@@ -2,47 +2,37 @@
     font-family: 'verdemoderna';
     src: url("./img/verdemoderna.woff")
 }
-
 #div-container {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; */
-    /* mobile */
 }
-
 div {
     color: white;
-
 }
-
 /* 1 div */
 #title {
     grid-template-columns: 1fr;
     grid-template-rows: 1;
     height: 100%;
     width: 100%;
-    /* border: solid blue; */
     grid-column: 1/3;
     background-image: url("http://www.csszengarden.com/214/huntington.jpg");
 }
-
 img {
-    position: relative;
+    /* position: relative; */
     left: 71px;
     top: 49px;
     height: 54px;
     width: 54px;
     border-radius: 50%;
 }
-
 #title>h1 {
     margin-left: 150px;
     font-size: 26px;
     font-family: 'Julius Sans One', sans-serif;
     margin-top: -7px;
 }
-
 #title>h2 {
     font-family: 'Libre Baskerville', serif;
     font-style: italic;
@@ -52,38 +42,39 @@ img {
     padding-bottom: 47px;
     opacity: 0.5;
 }
-
 /* 2div */
 #view-design {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    grid-column: 1fr;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    justify-content: center; 
     grid-row: 2;
     width: 100%;
-    height: 33%;
-    /* border: solid blue; */
+    /* height: 40%; */
     background-image: url("http://www.csszengarden.com/214/huntington.jpg");
     background-size: cover;
-    opacity: 0.8;
-    /* margin-top: -145px; */
+    opacity: 0.9;
 }
 
-#view-design>p {
+.divp1{
+    grid-column: 1;
     font-family: 'PT Serif', serif;
     font-size: 120px;
-    opacity: 0.7;
-    padding-top: 9px;
-    margin-top: -50px;
+    /* height:80px;
+    width: 80px; */
+    opacity: 0.5;
 }
-
-#view-design>h1 {
+.divT{
+    grid-column: 2;
     padding-top: 9px;
     font-family: 'Julius Sans One', sans-serif;
-    opacity: 0.6;
+    opacity: 0.6; 
 }
-
-
+.divp2{
+    grid-column: 3;
+    font-family: 'PT Serif', serif;
+    font-size: 120px;
+    opacity: 0.5;    
+}
 /* 3div */
 #par1-container {
     grid-row: 3;
@@ -116,11 +107,186 @@ img {
 
 /* 4div */
 #list1 {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-row: 8;
-    background-color: blueviolet;
-    border: solid black;
+    color: #607476;
+    background-color:  rgba(215, 240, 222, 0.5);
 }
+.one {
+    grid-column: 1;
+    grid-row: 1;
+    font-family: 'Julius Sans One', sans-serif;
+    /* font-size: 20px; */
+    font-style: normal;
+    color: #607476;
+}
+.one >h2{
+    color: #616857;
+    font-size: 0.9em;
+    font-style: normal;
+    font-family: 'Libre Baskerville', serif;
+    color: #607476;
+}
+.h2{
+   font-style: italic;
+   opacity: 0.5; 
+   color: #607476;
+   font-size: 12px;
+}
+.one >h1{
+    font-size: 16px;
+    color: #607476;
+}
+.two {
+    grid-column: 1;
+    grid-row: 2;
+    font-family: 'Julius Sans One', sans-serif;
+    font-style: normal
+}
+.two >h2{
+    color: #616857;
+    font-size: 0.9em;
+    font-style: normal;
+    font-family: 'Libre Baskerville', serif;
 
+}
+.h2{
+   font-style: italic;
+   opacity: 0.5;
+   font-size: 12px; 
+}
+.two >h1{
+    font-size: 16px;
+}    
+.three{
+    grid-column: 1;
+    grid-row: 3;
+    font-family: 'Julius Sans One', sans-serif;
+    font-style: normal
+}
+.three >h2{
+    color: #616857;
+    font-size: 0.9em;
+    font-style: normal;
+    font-family: 'Libre Baskerville', serif;
+
+}
+.h2{
+   font-style: italic;
+   opacity: 0.5; 
+   font-size: 12px; 
+}
+.three >h1{
+    font-size: 16px;
+}    
+.four {
+    grid-column: 1;
+    grid-row: 4;
+    font-family: 'Julius Sans One', sans-serif;
+    font-style: normal
+}
+.four >h2{
+    color: #616857;
+    font-size: 0.9em;
+    font-style: normal;
+    font-family: 'Libre Baskerville', serif;
+
+}
+.h2{
+   font-style: italic;
+   opacity: 0.5;
+   font-size: 12px;  
+}
+.four >h1{
+    font-size: 16px;
+}    
+.five{
+    grid-column: 2;
+    grid-row: 1;
+    font-family: 'Julius Sans One', sans-serif;
+    font-style: normal;    
+}
+.five >h2{
+    color: #616857;
+    font-size: 0.9em;
+    font-style: normal;
+    font-family: 'Libre Baskerville', serif;
+
+}
+.h2{
+   font-style: italic;
+   opacity: 0.5; 
+   font-size: 12px; 
+}
+.five >h1{
+    font-size: 16px;
+}           
+.six {
+    grid-column: 2;
+    grid-row: 2;
+    font-family: 'Julius Sans One', sans-serif;
+    font-style: normal
+}
+.six >h2{
+    color: #616857;
+    font-size: 0.9em;
+    font-style: normal;
+    font-family: 'Libre Baskerville', serif;
+
+}
+.h2{
+   font-style: italic;
+   opacity: 0.5; 
+   font-size: 12px; 
+}
+.six >h1{
+    font-size: 16px;
+}    
+.seven{
+    grid-column: 2;
+    grid-row: 3;
+    font-family: 'Julius Sans One', sans-serif;
+    font-style: normal
+}
+.seven >h2{
+    color: #616857;
+    font-size: 0.9em;
+    font-style: normal;
+    font-family: 'Libre Baskerville', serif;
+
+}
+.h2{
+   font-style: italic;
+   opacity: 0.5;
+   font-size: 12px;  
+}
+.seven >h1{
+    font-size: 16px;
+}    
+.eight {
+    grid-column: 2;
+    grid-row: 4;
+    font-family: 'Julius Sans One', sans-serif;
+    font-style: normal
+}
+.eight >h2{
+    color: #616857;
+    font-size: 0.9em;
+    font-style: normal;
+    font-family: 'Libre Baskerville', serif;
+
+}
+.h2{
+    font-size: 12px;
+   font-style: italic;
+   opacity: 0.5;
+   font-size: 12px;  
+}
+.eight >h1{
+    font-size: 16px;
+}
 /* 5div */
 #par2-container {
     grid-row: 4;
@@ -149,17 +315,44 @@ img {
 /* 6div */
 #list2 {
     grid-row: 9;
-    background-color: purple;
-
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    /* color: #607476; */
+    background-color: rgba(119, 177, 143, 0.5);
+    font-family: 'Julius Sans One', sans-serif;
+    font-size: 16px;
 }
-
-/* 7div */
+.one1{
+    grid-row:1;
+    grid-column: 1;
+    color: #607476;
+    /* border-bottom: solid 1px #a0b3a6; */
+}
+.two2{
+    grid-column: 1;
+    grid-row: 2;
+    color: #607476;
+}
+.three3{
+    grid-column: 1;
+    grid-row: 3;
+    color: #607476;
+}
+.four4{
+    grid-column: 2;
+    grid-row: 1;
+    color: #607476;
+}
+.five5{
+    grid-column: 2;
+    grid-row: 2;
+    color: #607476;
+}
 #require-container {
     grid-row: 5;
     background-color: white;
-
 }
-
 #require {
     font-family: 'Libre Baskerville', serif;
     font-size: 15px;
@@ -168,28 +361,18 @@ img {
     margin-left: 46px;
     margin-bottom: 30px;
 }
-
 .require {
     font-family: 'Julius Sans One', sans-serif;
     font-size: 20px;
 }
-
-/* 8div */
-/* #blank{
-    background-color: greenyellow;
-    grid-row: 8;
-    border: solid blue;
-} */
-/* 9div */
 #footer {
     display: flex;
+    justify-content: center;
     text-align: center;
     height:180px;
     grid-row: 6;
     background-image: url("http://www.csszengarden.com/214/huntington.jpg");
-    border: solid blue;
 }
-
 #dave,
 #media,
 #zen {
@@ -197,9 +380,7 @@ img {
     font-style: normal;
     font-family: 'Libre Baskerville', serif;
     font-size: 23px;
-
 }
-
 #by,
 #band,
 #donate,
@@ -209,21 +390,110 @@ img {
     font-style: italic;
     font-size: 22px;
 }
-
-/* 10div */
-
 #links {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
     height: 100px;
     background: #134347;
     grid-row: 7;
 }
-
+.links{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-left: 110px;
+    margin-right: 110px;
+}
 .html {
-    font-size: 40px;
+    font-size: 50px;
     color: whitesmoke;
     opacity: 0.5;
     font-family: 'verdemoderna';
+}
+
+@media (min-width: 768px){
+    #div-container {
+        height: 400px;
+        grid-template-columns: 2fr 1fr;
+        grid-template-rows: 2fr 4fr 3fr 3fr 2fr 1fr;
+    }
+    #title {
+        justify-content: center;
+        height: 100%;
+        grid-column: 1/2;
+        grid-row: 1;    
+    }
+    #title >h1{
+        margin-top: -87px;
+        font-size: 44px;
+        margin-left: 249px;
+    }
+    #title >h2{
+        font-size: 20px;
+        margin-left: 254px;
+        margin-top: -19px; 
+
+    }
+    #title > img{
+        height: 90px;
+        width: 90px;
+        margin-top: 85px;
+        margin-left: 138px; 
+    }
+    #view-design{
+        height: 100%;
+        grid-column: 2/3;
+        grid-row: 1;
+        
+    }
+    .divT > h1{
+        font-size: 25px;
+        margin-top: 185px;
+    }
+    .divp1 >p{
+        margin-bottom: 180px;
+        margin-left: 39px;
+    }
+    .divp2 > p{ 
+    margin-right: 40px;
+    }
+    
+    #par1-container{
+        grid-column: 1/2;
+        grid-row: 2;
+        margin-top: 8px;
+    }
+    #list1 {
+        grid-column: 2/3;
+        grid-row: 2;
+        
+    }
+    #list2{
+        grid-column: 2/3;
+        grid-row: 4;
+        background-color: rgba(113, 158, 132, 0.5);   
+    }
+    #blank{
+    grid-column: 2/3;
+    grid-row: 5;
+    background-color:  rgba(215, 240, 222, 0.5);
+    } 
+    #footer{
+        grid-column: 1/3;
+        grid-row: 6;
+
+    }
+    #links{
+        grid-column: 1/3;
+        grid-row: 7;
+    }
+    #dave,
+    #media,
+    #zen {
+        font-size: 34px;
+    }
+    #by,
+    #band,
+    #donate,
+    #now {
+       font-size: 30px; 
+    }    
 }
