--- a/projects/zen-garden/git.css
+++ b/projects/zen-garden/git.css
@@ -1,3 +1,5 @@
+
+    
 @font-face {
     font-family: 'verdemoderna';
     src: url("./img/verdemoderna.woff")
@@ -12,33 +14,32 @@ div {
 }
 /* 1 div */
 #title {
-    /* grid-template-columns: 1fr;
-    grid-template-rows: 1; */
+    grid-template-columns: 1fr;
+    grid-template-rows: 1;
     height: 100%;
     width: 100%;
     grid-column: 1/3;
     background-image: url("http://www.csszengarden.com/214/huntington.jpg");
-    
 }
 img {
-    position: relative;
-    margin-left: 75px;
-    margin-top: 54px;
-    height: 85px;
-    width: 85px;
+    /* position: relative; */
+    left: 71px;
+    top: 49px;
+    height: 54px;
+    width: 54px;
     border-radius: 50%;
 }
 #title>h1 {
-    margin-left: 183px;
-    font-size: 38px;
+    margin-left: 150px;
+    font-size: 26px;
     font-family: 'Julius Sans One', sans-serif;
     margin-top: -7px;
 }
 #title>h2 {
     font-family: 'Libre Baskerville', serif;
     font-style: italic;
-    font-size: 21px;
-    margin-left: 182px;
+    font-size: 15px;
+    margin-left: 162px;
     margin-top: -13px;
     padding-bottom: 47px;
     opacity: 0.5;
@@ -46,43 +47,35 @@ img {
 /* 2div */
 #view-design {
     display: grid;
-    flex-direction: row; 
     grid-template-columns: 1fr 3fr 1fr;
-    /* justify-content: center;  */
+    justify-content: center; 
     grid-row: 2;
     width: 100%;
-    height: 42%;
+    /* height: 40%; */
     background-image: url("http://www.csszengarden.com/214/huntington.jpg");
     background-size: cover;
     opacity: 0.9;
 }
 
-
-.divp1 {
-    grid-column: 1; 
+.divp1{
+    grid-column: 1;
     font-family: 'PT Serif', serif;
     font-size: 120px;
     /* height:80px;
     width: 80px; */
     opacity: 0.5;
-    margin-top: -152px;
-    margin-left: 18px;
-    
 }
 .divT{
-    grid-column: 2; 
+    grid-column: 2;
     padding-top: 9px;
     font-family: 'Julius Sans One', sans-serif;
     opacity: 0.6; 
-    margin-top: 13px;
 }
 .divp2{
     grid-column: 3;
     font-family: 'PT Serif', serif;
     font-size: 120px;
-    opacity: 0.5; 
-    margin-top: -152px;
-    margin-left: 54px;    
+    opacity: 0.5;    
 }
 /* 3div */
 #par1-container {
@@ -455,8 +448,7 @@ img {
     }
     .divT > h1{
         font-size: 25px;
-        margin-top: 115px;
-        margin-left: 38px;
+        margin-top: 185px;
     }
     .divp1 >p{
         margin-bottom: 180px;
@@ -507,3 +499,4 @@ img {
        font-size: 30px; 
     }    
 }
+
