--- a/projects/zen-garden/styles.css
+++ b/projects/zen-garden/styles.css
@@ -11,17 +11,29 @@ div {
     color: white;
 }
 /* 1 div */
-#title {
-    /* grid-template-columns: 1fr;
-    grid-template-rows: 1; */
-    height: 100%;
-    width: 100%;
+#title-view-design {
+    /* box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 2fr 1fr ;
+    grid-template-rows: 3;
+    height: 70%;
+    width: 100%; */
     grid-column: 1/3;
     background-image: url("http://www.csszengarden.com/214/huntington.jpg");
     
 }
-img {
-    position: relative;
+#title{
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 2fr 1fr ;
+    grid-template-rows: 3;
+    height: 70%;
+    width: 100%; 
+    grid-column: 1;
+    grid-row: 2;
+}
+title > img {
+    /* position: relative; */
     margin-left: 75px;
     margin-top: 54px;
     height: 85px;
