--- a/nate-exercises/silly-cia/styles.css
+++ b/nate-exercises/silly-cia/styles.css
@@ -1,41 +1,41 @@
+
 div{
     display: flex;
     flex-direction: column;
 }
 h1{
     text-align: center;
-    font-size: 50px;
-    color: darkgreen;
+    font-size: 40px;
     font-family: georgia;
+    color: darkgreen;
 }
 h2{
+    font-size: 30px;
+    margin-top: 100px;
+    font-family: Georgia;
     text-align: center;
-    font-size: 42px;
 }
 img {
     height: 300px;
     width: 300px;
     float: left;
     margin: 10px;
-    
 }
-ul {
-    font-size: 25px;
-
+p{
+    font-size: 22px;
 }
-h3{
-    font-size: 25px;
-    text-transform: uppercase;
+ul{
+    font-size: 20px;
+}
+span{
+    font-weight: bold;
 }
 a{
     text-decoration: none;
-    color: blue;
-    font-size: 20px;
-
 }
 a:hover{
     text-decoration: underline;
 }
-div{
-    font-size: 30px;
+h3{
+    text-transform: uppercase;
 }
