--- a/projects/seinfeld-project1/src/components/styles.css
+++ b/projects/seinfeld-project1/src/components/styles.css
@@ -1,5 +1,93 @@
 .characters-container {
     text-align: center;
     align-content: center;
+    
+
 
 }
+.quote-container{
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    text-align: center;
+
+}
+.quote-container > h1{
+    font-size: 60px;
+    font-family: 'Lobster', cursive;
+}
+.title{
+    font-size: 75px;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 150px; 
+    font-family: 'Lobster', cursive;
+    color: #EC2930;
+    text-shadow: 3px 3px 3px black;
+}
+.navbar{
+    font-size: 25px;
+    display:flex;
+    justify-content: space-around;
+    
+
+}
+.logo-image{
+    width: 100%;
+    height: 300px;
+}
+body{
+    background-color: #f8d408;
+}
+input[type=radio]{
+    transform: scale(2);
+    margin-right: 25px;
+}
+.form >h2{
+    display: inline;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.choice{
+    display: flex;
+    align-items: center;
+    background-color: #EC2930;
+    width: 40%;
+    border: solid 2px black;
+    margin-left: 400px;
+    
+}
+.submit{
+    height: 30px;
+    width: 100px;
+    margin: auto;
+    font-size: 13px;
+}
+.next-question{
+    /* display: flex;
+    align-self: flex-end;
+    justify-content: flex-end;
+    align-content: flex-end; */
+    /* margin-left: 750px; */
+    height: 30px;
+    width: 100px;
+    margin:auto;
+    font-size: 12px;
+}
+section{
+    display: flex;
+    flex-direction: column;
+
+}
+.image{
+    height: 650px;
+    width: 650px;
+    border-radius: 8%;
+    border: solid 10px black;
+}
+
