--- a/projects/seinfeld-project-version-2/src/components/styles.css
+++ b/projects/seinfeld-project-version-2/src/components/styles.css
@@ -13,8 +13,14 @@
 
 }
 .quote-container > h1{
-    font-size: 60px;
-    font-family: 'Lobster', cursive;
+    font-size: 50px;
+    font-family: 'Khand', sans-serif;
+    font-weight: light;
+}
+.quote-container > h2{
+    font-size: 40px;
+    font-family: 'Khand', sans-serif;
+
 }
 .title{
     font-size: 75px;
@@ -23,7 +29,15 @@
     margin-bottom: 150px; 
     font-family: 'Lobster', cursive;
     color: #EC2930;
-    text-shadow: 3px 3px 3px black;
+    text-shadow: 3px 5px 5px black;
+}
+.subtitle >h1{
+    font-size: 80px;
+    font-family: 'Lobster', cursive;
+    text-align: center; 
+    font-weight: bold;
+    color: #EC2930;
+    text-shadow: 4px 4px 6px black;
 }
 .navbar{
     font-size: 25px;
@@ -42,9 +56,13 @@ body{
 input[type=radio]{
     transform: scale(2);
     margin-right: 25px;
+    
 }
+
+    
 .form >h2{
     display: inline;
+
 }
 form{
     display: flex;
@@ -62,22 +80,25 @@ form{
     margin-left: 400px;
     
 }
+.choice >h2{
+    font-size: 30px;
+    
+}
 .submit{
     height: 30px;
     width: 100px;
     margin: auto;
     font-size: 13px;
+    border: solid 2px black;
+    font-weight: bold;
 }
 .next-question{
-    /* display: flex;
-    align-self: flex-end;
-    justify-content: flex-end;
-    align-content: flex-end; */
-    /* margin-left: 750px; */
     height: 30px;
     width: 100px;
     margin:auto;
-    font-size: 12px;
+    font-size: 11px;
+    border: solid 2px black;
+    font-weight: bold;
 }
 section{
     display: flex;
@@ -92,8 +113,19 @@ section{
 }
 .videos > iframe {
     border: solid 5px black;
+
 }
 .videos{
 display: flex;
-flex-direction: row;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+width: 100%
 }
+.video-main >h1{
+    font-size: 50px;
+    font-family: 'Bevan', cursive;
+    font-weight: bold;
+    text-align: center
+}
+
