--- a/projects/seinfeld-project-version-2/src/components/styles.css
+++ b/projects/seinfeld-project-version-2/src/components/styles.css
@@ -43,27 +43,28 @@
     font-size: 25px;
     display:flex;
     justify-content: space-around;
-    
-
 }
+
 .logo-image{
     width: 100%;
     height: 300px;
 }
+
 body{
     background-color: #f8d408;
 }
+
 input[type=radio]{
     transform: scale(2);
     margin-right: 25px;
     
 }
-
     
 .form >h2{
     display: inline;
 
 }
+
 form{
     display: flex;
     flex-direction: column;
@@ -75,46 +76,61 @@ form{
     display: flex;
     align-items: center;
     background-color: #EC2930;
-    width: 40%;
+    width: 30%;
     border: solid 2px black;
-    margin-left: 400px;
+    margin-left: 490px;
+    text-align: center;
     
 }
 .choice >h2{
     font-size: 30px;
     
+    
+}
+.buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /* height: 80px;
+    width: 80px; */
+    padding-top: 20px;
 }
 .submit{
-    height: 30px;
-    width: 100px;
-    margin: auto;
-    font-size: 13px;
+    height: 50px;
+    width: 150px;
+    /* margin: auto; */
+    font-size: 20px;
     border: solid 2px black;
     font-weight: bold;
 }
+
 .next-question{
-    height: 30px;
-    width: 100px;
-    margin:auto;
-    font-size: 11px;
+    height: 50px;
+    width: 150px;
+    /* margin:auto; */
+    font-size: 18px;
     border: solid 2px black;
     font-weight: bold;
 }
+
 section{
     display: flex;
     flex-direction: column;
 
 }
+
 .image{
     height: 650px;
     width: 650px;
     border-radius: 8%;
     border: solid 10px black;
 }
+
 .videos > iframe {
     border: solid 5px black;
 
 }
+
 .videos{
 display: flex;
 flex-direction: column;
@@ -122,10 +138,72 @@ justify-content: center;
 align-items: center;
 width: 100%
 }
+
 .video-main >h1{
+    padding-top: 50px;
     font-size: 50px;
     font-family: 'Bevan', cursive;
     font-weight: bold;
     text-align: center
 }
 
+.character-facts{
+    display: "flex";
+    flex-direction: column;
+    text-align: center;
+    margin-left: 130px;
+    margin-right: 130px;   
+}
+
+.character-heading{
+    font-size: 30px;
+    text-align: center;
+    margin-top: 170px;
+    font-family: 'Lobster', cursive;
+}
+.character-facts >img{
+    border: 10px solid black;
+    width: 500px;
+}
+.character-facts >p{
+    font-size: 25px;
+    font-family: 'Khand', sans-serif;
+
+
+}
+@media(min-width: 500px) and (max-width: 768px ){
+    .character-facts{
+        margin-left: 0px;
+        margin-right: 0px;    
+    }
+    .character-facts >p{
+        font-size: 20px;
+    }
+    .subtitle >h1{
+        font-size: 60px;
+        
+    }
+    .quote-container >h1{
+        font-size: 40px;
+        padding-top: 100px;
+    }
+    .quote-container >h2{
+        font-size: 30px;
+    
+    }
+    .choice{
+        display: flex;
+        align-items: center;
+        width: 80%;
+        margin-left: 50px;    
+    }
+    .image{
+        height: 500px;
+        width: 500px;
+    }
+    .videos{
+        width: 90%
+        }
+
+    
+}    
